saet logo-container display to flex

--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -10,6 +10,9 @@ header {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      .logo-container {
+         display: flex;
+      }
       .menu {
          display: flex;
          gap: index.$mg-2;
