add the main content

--- a/src/index.scss
+++ b/src/index.scss
@@ -60,7 +60,7 @@ $header: 3.5rem;
    color: $white;
    font-weight: $semi-bold;
 }
-.title {
+.sub-title {
    font-size: $medium-1;
    color: $white;
    font-weight: $semi-bold;
