--- a/src/App.scss
+++ b/src/App.scss
@@ -46,10 +46,34 @@
          figure {
             width: 100%;
             position: relative;
+            display: flex;
+
             img {
-               width: 100%;
+               width: 80%;
                height: auto;
                display: block;
+            }
+         }
+      }
+   }
+}
+
+@media (min-width: index.$ipad-breaking-point) {
+   .app {
+      main {
+         display: flex;
+         height: calc(100vh - 3.5rem);
+
+         .hero-container {
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: row;
+            .hero-content {
+               flex: 1;
+            }
+            figure {
+               flex: 1;
+               justify-content: flex-end;
             }
          }
       }
