--- a/src/index.scss
+++ b/src/index.scss
@@ -69,7 +69,7 @@ $header: 3.5rem;
 .text {
    font-size: $small;
    color: $white;
-   font-weight: $normal;
+   font-weight: $light;
 }
 
 body {
