add members section and style it

--- a/src/App.scss
+++ b/src/App.scss
@@ -54,6 +54,7 @@
       }
    }
 
+   // ============ SECTIONS =========== //
    .content-header-wrapper {
       position: relative;
       .content-title {
@@ -72,11 +73,6 @@
       .content-sub-title {
          text-align: center;
          z-index: 100;
-      }
-   }
-
-   .products {
-      .products-container {
       }
    }
 }
