add margin top the the content-header-wrapper

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,6 +57,7 @@
    // ============ SECTIONS =========== //
    .content-header-wrapper {
       position: relative;
+      margin-bottom: 3rem;
       .content-title {
          color: index.$blue;
          font-size: index.$large-2;
