--- a/src/App.scss
+++ b/src/App.scss
@@ -83,8 +83,9 @@
       padding-bottom: 10px;
       .footer-container {
          .footer-top {
-            justify-content: space-between;
-            flex-wrap: wrap;
+            justify-content: space-evenly;
+            gap: 1rem;
+
             color: index.$white;
             small {
                text-transform: uppercase;
@@ -95,8 +96,19 @@
                text-transform: capitalize;
                line-height: 2;
             }
+            .socials {
+               ul {
+                  display: flex;
+                  gap: 1rem;
+               }
+               li {
+                  font-size: 20px;
+               }
+            }
          }
          .footer-bottom {
+            margin-top: 1rem;
+            text-align: center;
             small {
                font-size: 10px;
             }
