--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -16,6 +16,11 @@ form {
       border-radius: 5px;
       font-size: 16px;
       padding: 0 5px;
+      width: 100%;
+   }
+   .form-control {
+      width: 100%;
+      position: relative;
    }
 
    textarea {
