add margin top to the main section

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
    background-color: index.$background;
    // ===============Main ============== //
    main {
+      margin-top: 3.5rem;
       .hero-container {
          flex-direction: column;
          gap: 30px;
