--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -6,6 +6,7 @@ header {
    width: 100%;
    background-color: index.$background;
    z-index: 10000;
+   top: 0;
    nav {
       height: 100%;
       display: flex;
